Adding sign in a user documentation
